--- a/Compubuilt/Views/Customers/Index.cshtml
+++ b/Compubuilt/Views/Customers/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Compubuilt.Models.Customer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Customer management";
 }
+<div class="container">
 
-<h1>Index</h1>
+<h1>Customer management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -87,3 +88,4 @@
 }
     </tbody>
 </table>
+</div>
