--- a/Compubuilt/Views/DeliveryTypes/Index.cshtml
+++ b/Compubuilt/Views/DeliveryTypes/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Compubuilt.Models.DeliveryType>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Delivery methods management";
 }
+<div class="container">
 
-<h1>Index</h1>
+<h1>Delivery methods management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -33,3 +34,4 @@
 }
     </tbody>
 </table>
+</div>
