--- a/Compubuilt/Views/Orders/PlaceOrder.cshtml
+++ b/Compubuilt/Views/Orders/PlaceOrder.cshtml
@@ -3,4 +3,10 @@
 *@
 @{
 }
-<h5>Order successfully placed</h5>
+<div class="container" style="margin-left: auto; margin-right: auto;">
+<h3>Thank you!</h3>
+    <br/>
+    <h5>Your order @ViewData["OrderNumber"] has been successfully placed.</h5>
+    <br/>
+<img src="https://i.postimg.cc/0jHRJkmx/toppng-com-thumb-up-icon-color-thumbs-up-icon-transparent-1167x1201-Ma-e.png"/>
+</div>
