--- a/Compubuilt/Views/PaymentTypes/Index.cshtml
+++ b/Compubuilt/Views/PaymentTypes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Compubuilt.Models.PaymentType>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Payment methods management";
 }
 <div class="container">
-<h1>Index</h1>
+<h1>Payment methods management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
