--- a/Compubuilt/Views/ProductImages/Index.cshtml
+++ b/Compubuilt/Views/ProductImages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Compubuilt.Models.ProductImage>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Product images management";
 }
+<div class="container">
 
-<h1>Index</h1>
+<h1>Product images management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -81,3 +82,4 @@
 }
     </tbody>
 </table>
+</div>
