--- a/Compubuilt/Views/PromotionalCodes/Index.cshtml
+++ b/Compubuilt/Views/PromotionalCodes/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<Compubuilt.Models.PromotionalCode>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Promotional codes management";
 }
+<div class="container">
 
-<h1>Index</h1>
+<h1>Promotional codes management</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -63,3 +64,4 @@
 }
     </tbody>
 </table>
+</div>
