--- a/Compubuilt/Views/Products/Edit.cshtml
+++ b/Compubuilt/Views/Products/Edit.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="container">
 
 <h1>Edit</h1>
-
 <h4>Product</h4>
 <hr />
 <div class="row">
@@ -39,6 +39,36 @@
                 <span asp-validation-for="ProductCategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AverageRatingValue" class="control-label"></label>
+                <input asp-for="AverageRatingValue" class="form-control" />
+                <span asp-validation-for="AverageRatingValue" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IsActive" class="control-label"></label>
+                <input asp-for="IsActive" class="form-control" />
+                <span asp-validation-for="IsActive" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CreatedDate" class="control-label"></label>
+                <input asp-for="CreatedDate" class="form-control" />
+                <span asp-validation-for="CreatedDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CreatedBy" class="control-label"></label>
+                <input asp-for="CreatedBy" class="form-control" />
+                <span asp-validation-for="CreatedBy" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastModifiedDate" class="control-label"></label>
+                <input asp-for="LastModifiedDate" class="form-control" />
+                <span asp-validation-for="LastModifiedDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastModifiedBy" class="control-label"></label>
+                <input asp-for="LastModifiedBy" class="form-control" />
+                <span asp-validation-for="LastModifiedBy" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -48,7 +78,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
