--- a/Compubuilt/Views/Products/ProductPage.cshtml
+++ b/Compubuilt/Views/Products/ProductPage.cshtml
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+           @* <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="related__title">
                         <h5>RELATED PRODUCTS</h5>
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
     </section>
     <!-- Product Details Section End -->
