--- a/Compubuilt/Views/Shared/Components/OrderSummary/OrderSummary.cshtml
+++ b/Compubuilt/Views/Shared/Components/OrderSummary/OrderSummary.cshtml
@@ -45,14 +45,14 @@
         <p>Payment method</p>
         @Html.DropDownListFor(x => Model.SelectedPaymentTypeId, new SelectList(Model.OrderPaymentTypes, "PaymentTypeId", "PaymentTypeName"), htmlAttributes: new { @class = "form-control", id = "SelectedPaymentTypeId" })
         <br/>
-        if(@Model.CustomerHasAddressInformation == "enabled")
+        @if(@Model.CustomerHasAddressInformation == "enabled")
         {
             <input type="submit" value="Place order" @Model.CustomerHasAddressInformation class="site-btn" />
         }
         else
         {
-            <p>You have to provide address information before placing an order.</p>
-            <input type="submit" value="Place order" @Model.CustomerHasAddressInformation class="site-btn" />
+            <p>You have to provide and save your address information before placing an order.</p>
+            <input type="submit" value="Place order" @Model.CustomerHasAddressInformation class="site-btn" style="background: #ababab"/>
         }
 
         </form>
