--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -104,25 +104,31 @@
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
                         </li>*@
-                        <li>
-                            <a href="#">System Management</a>
-                            <ul class="dropdown">
-                                <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Payment Methods</a></li>
-                                <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
-                                <li><a asp-area="" asp-controller="Customers" asp-action="Index">Customers</a></li>
-                                <li><a asp-area="" asp-controller="Orders" asp-action="Index">Orders</a></li>
-                                <li><a asp-area="" asp-controller="CustomerAddresses" asp-action="Index">Customer Addresses</a></li>
-                                <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
-                                <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
-                                <li><a asp-area="" asp-controller="PromotionalCodes" asp-action="Index">Promotional Codes</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a href="#">Blog Details</a></li>
-                            </ul>
-                        </li>
-<li>
-    <a asp-controller="Customers" asp-action="CustomerDetailsEdit">My Profile</a>
+                        @if (User.Identity.IsAuthenticated /*&& User.IsInRole("ShopAdministrator")*/)
+                        {
+                            <li>
+                                <a href="#">System Management</a>
+                                <ul class="dropdown">
+                                    <li><a asp-area="" asp-controller="PaymentTypes" asp-action="Index">Payment Methods</a></li>
+                                    <li><a asp-area="" asp-controller="DeliveryTypes" asp-action="Index">Delivery Methods</a></li>
+                                    <li><a asp-area="" asp-controller="Customers" asp-action="Index">Customers</a></li>
+                                    <li><a asp-area="" asp-controller="CustomerAddresses" asp-action="Index">Customer Addresses</a></li>
+                                    <li><a asp-area="" asp-controller="PromotionalCodes" asp-action="Index">Promotional Codes</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index">Orders</a></li>
+                                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
+                                    <li><a asp-area="" asp-controller="ProductImages" asp-action="Index">Product Images</a></li>
+                                </ul>
+                            </li>
+                        }
 
-</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>
+                            <a asp-controller="Customers" asp-action="CustomerDetailsEdit">My Profile</a>
+
+                        </li>
+                    }
 <li>
     <a asp-area="" asp-controller="ShoppingCart" asp-action="Index">
         Cart <span class="icon_bag_alt"></span>
