--- a/Compubuilt/Views/ShoppingCart/Index.cshtml
+++ b/Compubuilt/Views/ShoppingCart/Index.cshtml
@@ -9,21 +9,39 @@
     <!-- Shop Cart Section Begin -->
     <section class="shop-cart spad">
         <div class="container">
+            @if (TempData["ProductName"] != null)
+            {
+                <div class="alert alert alert-secondary alert-dismissible fade show" role="alert">
+                    <strong>@TempData["ProductName"]</strong> has been added to cart.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
+            @if (TempData["PromotionalCode"] != null)
+            {
+                <div class="alert alert alert-secondary alert-dismissible fade show" role="alert">
+                    <strong>@TempData["PromotionalCode"]</strong> has been activated.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shop__cart__table">
                         <table>
                             <thead>
-                                <tr>
-                                    <th>Product</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                    <th></th>
-                                </tr>
+                            <tr>
+                                <th>Product</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                                <th></th>
+                            </tr>
                             </thead>
                             <tbody>
-                            
+
                             @foreach (var product in Model.Items)
                             {
                                 <tr>
@@ -41,11 +59,11 @@
                                         </div>
                                     </td>
                                     <td class="cart__price">$ @Html.DisplayFor(modelItem => product.Price)</td>
-                                    <td class="cart__quantity">
-                                        <div class="pro-qty">
-                                            <input type="text" value="@Html.DisplayFor(modelItem => product.Quantity)">
-                                        </div>
-                                    </td>
+                                    <td/>
+                                    <div>
+                                        <input class="pro-qty" type="text" value="@Html.DisplayFor(modelItem => product.Quantity)" disabled>
+                                    </div>
+
                                     <td class="cart__total">$ @Html.DisplayFor(modelItem => product.TotalPrice)</td>
                                     <td class="cart__close"><a asp-controller="ShoppingCart" asp-action="Delete" asp-route-id="@product.ProductId"><span class="icon_close"></span></a></td>
                                 </tr>
@@ -63,9 +81,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="cart__btn update__btn">
+                    @*                    <div class="cart__btn update__btn">
                         <a href="#"><span class="icon_loading"></span> Update cart</a>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <div class="row">
